[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=2]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Cave-Story.ttf"

[sub_resource type="DynamicFont" id=2]

size = 38
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Demo" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D",
"_edit_lock_": true
}

[node name="panel" type="Panel" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Hint", "Rect" ]

[node name="text_interface_engine" type="ReferenceRect" parent="panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 2 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="demos_list" type="OptionButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1

[connection signal="item_selected" from="demos_list" to="." method="_on_demos_list_item_selected"]


